--- a/bp-templates/shared/styles/_bp_cover_image.scss
+++ b/bp-templates/shared/styles/_bp_cover_image.scss
@@ -28,7 +28,7 @@
 #item-header-cover-image {
 	//padding: 0 1em;
 	position: relative;
-	z-index: 999;
+	z-index: 2;
 
 	#item-header-avatar {
 		padding: 0 1em;
