--- a/bp-templates/shared/styles/_bp_groups_loop.scss
+++ b/bp-templates/shared/styles/_bp_groups_loop.scss
@@ -64,8 +64,6 @@
 			.wrap {
 				min-height: 400px;
 				padding-bottom: 0;
-
-				.group-desc {}
 			}
 		}
 	}
@@ -76,16 +74,17 @@
 // can be too large so modify font-size by grid class parents.
 
 .buddypress {
-
 	.grid {
-		&.three,
-		&.four {
-			.group-desc {
-				p {
-					@include responsive-font(14)
+		@include medium-up {
+
+			&.three,
+			&.four {
+				.group-desc {
+						@include font-size(14)
 				}
 			}
-		}
+
+		} // @media
 	}
 }
 
